fix: horizontal scroll bar appearing

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -83,7 +83,7 @@
 body {
   background-color: rgb(var(--md-sys-color-background));
   color: rgb(var(--md-sys-color-on-background));
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
   margin: 0;
 
